# WifiDisplay

./: .gitignore
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/wifidisplay/: MainActivity.kt
android/app/src/main/java/com/wifidisplay/codec/: VideoDecoder.kt
android/app/src/main/java/com/wifidisplay/network/: TouchSender.kt  UdpReceiver.kt
android/app/src/main/java/com/wifidisplay/ui/: ConnectionScreen.kt  DisplayScreen.kt
android/app/src/main/res/values/: themes.xml
driver/: README.md
driver/Community Scripts/: HDRswitch-VDD.ps1  changeres-VDD.ps1  get_disp_num.ps1  modules_install.bat  primary-VDD.ps1  refreshrate-VDD.ps1  rotate-VDD.ps1  scale-VDD.ps1  winp-VDD.ps1
driver/Virtual Display Driver (HDR)/: vdd_settings.xml
server/: Cargo.toml
server/crates/scrap-local/: Cargo.toml  build.rs
server/crates/scrap-local/src/common/: dxgi.rs
server/src/: capture.rs  config.rs  encoder.rs  input.rs  main.rs  transport.rs
