[package]
name = "wifi-display-server"
version = "0.1.0"
edition = "2021"
description = "WiFi display extender - streams virtual monitor to Android tablet"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
scrap = "0.5"
openh264 = "0.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
