[package]
name = "scrap"
description = "Screen capture made easy. (local fork of 0.5.0 with device_name accessor)"
version = "0.5.0"
repository = "https://github.com/quadrupleslap/scrap"
documentation = "https://docs.rs/scrap"
keywords = ["screen", "capture", "record"]
license = "MIT"
authors = ["Ram <quadrupleslap@gmail.com>"]
edition = "2015"

[dependencies]
block = "0.1"
cfg-if = "0.1"
libc = "0.2"
winapi = "0.2"

[dev-dependencies]
repng = "0.2"
